# btrfsd

./: .clang-format  .editorconfig  NEWS.md  README.md  RELEASE  autoformat.py  meson.build  meson_options.txt
.github/workflows/: build-test.yml  codeql.yml
data/: btrfsd.service.in  btrfsd.timer  error-mail.tmpl  meson.build  settings.conf
docs/: btrfsd.8.xml  meson.build
src/: btd-btrfs-mount.c  btd-btrfs-mount.h  btd-filesystem.c  btd-filesystem.h  btd-fs-record.c  btd-fs-record.h  btd-logging.c  btd-logging.h  btd-mailer.c  btd-mailer.h  btd-mount-record.c  btd-mount-record.h  btd-scheduler.c  btd-scheduler.h  btd-utils.c  btd-utils.h  btrfsd.c  btrfsd.gresource.xml  meson.build
tests/: meson.build  test-btd.c
tests/ci/: Dockerfile-debian-stable  Dockerfile-debian-testing  Dockerfile-fedora-latest  install-deps-deb.sh  install-deps-rpm.sh  run-build.sh  run-tests.sh
